# playlist-not-bot

./: .gitignore  .replit  README.md  pyproject.toml  written.json
convert/apple music/: main.js  main.py
src/: bot.py  commands.py  heartbeat.py  master.py  notbot.py  slave.py
src/master/: api.py  bot.py  heartbeat.py  index.html  master.py  test.py
src/slave/: slave.py
