[tool.poetry]
name = "repl_python3_playlist-not-bot"
version = "0.1.0"
description = ""
authors = ["ColinHoscheit1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
